examples/test/testpolicy15393.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy15393
  namespace: namespace356
spec:
  podSelector:
    matchLabels:
      key6: value16
      key30: value43
      key39: value23
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key37: value27
      podSelector:
        matchLabels:
          key23: value33
          key3: value44
          key24: value17
